--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "webpack&&node server/index.js"
+    "start": "webpack --mode development && node server/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
-    "jsx-loader": "^0.13.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "webpack": "^4.0.0",
+    "webpack-cli": "^2.0.8"
   }
 }
